--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,15 @@ description: "August 2023 to June 2024"
 owner_name: Nighthawk Coders
 github_username: BearytheGreenBear
 baseurl: "/csp-blog"
-remote_theme: pages-themes/midnight@v0.2.0
+# remote_theme: pages-themes/midnight@v0.2.0
 # remote_theme: pages-themes/dinky@v0.2.0
-# remote_theme: pages-themes/minimal@v0.2.0
+remote_theme: pages-themes/minimal@v0.2.0
+logo: /assets/img/logo.png
+show_downloads: false
+google_analytics:
+theme: jekyll-theme-minimal
+
+
 # remote_theme: pages-themes/hacker@v0.2.0
 # remote_theme: pages-themes/cayman@v0.2.0
 # remote_theme: pages-themes/time-machine@v0.2.0
